; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_dvd.c___dvd_fwpatchmem.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_dvd.c___dvd_fwpatchmem.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@__dvd_finalpatchcb = common dso_local global i32 0, align 4
@_diReg = common dso_local global i32* null, align 8
@__dvd_driveinfo = common dso_local global i32 0, align 4
@DVD_DRVINFSIZE = common dso_local global i32 0, align 4
@__dvd_fwpatchcb = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @__dvd_fwpatchmem to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @__dvd_fwpatchmem(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  store i32 %3, i32* @__dvd_finalpatchcb, align 4
  %4 = load i32*, i32** @_diReg, align 8
  %5 = getelementptr inbounds i32, i32* %4, i64 1
  %6 = load i32, i32* %5, align 4
  %7 = load i32*, i32** @_diReg, align 8
  %8 = getelementptr inbounds i32, i32* %7, i64 1
  store i32 %6, i32* %8, align 4
  %9 = load i32, i32* @DVD_DRVINFSIZE, align 4
  %10 = call i32 @DCInvalidateRange(i32* @__dvd_driveinfo, i32 %9)
  %11 = load i32, i32* @__dvd_fwpatchcb, align 4
  %12 = call i32 @DVD_LowInquiry(i32* @__dvd_driveinfo, i32 %11)
  ret void
}

declare dso_local i32 @DCInvalidateRange(i32*, i32) #1

declare dso_local i32 @DVD_LowInquiry(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
